Updated flash messages to truncate long messages, and include reviewer and reviewee pairs. Updated css stylesheet to centre the exclamation mark in error flashes when the error message is multiple lines. Added testcase to ensure that has_marks_or_annotations? works as expected, and prevents peer reviewers from being unassigned

--- a/app/assets/stylesheets/common/core.scss
+++ b/app/assets/stylesheets/common/core.scss
@@ -498,6 +498,8 @@ option.uncollected {
 .flash-content {
   display: inline-block;
   padding-left: 5pt;
+  vertical-align: middle;
+  max-width: calc(100% - 3em);
 }
 
 // Empty space, used in criteria page
